--- a/project_files/index.html
+++ b/project_files/index.html
@@ -5,39 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | Shyam Kannan</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="about.css"> <!-- Link to your CSS file -->
+  <link rel="stylesheet" href="about.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
 
   <!-- Main Container for the whole page -->
   <div class="page-container">
 
-    <!-- Light/Dark Mode Toggle Button & Navigation -->
+    <!-- Light/Dark Mode Toggle Button -->
     <header>
+      <button id="theme-toggle" class="theme-toggle">🌙</button>
+
+      <!-- Navigation for larger screens -->
       <nav class="nav-container">
-        <button id="theme-toggle" class="theme-toggle">🌙</button>
-
-        <!-- Hamburger menu for mobile -->
-        <div class="hamburger-menu">
-          ☰ Menu
-        </div>
-
-        <!-- Dropdown menu for mobile -->
-        <ul class="dropdown-menu">
-          <li><a href="index.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="skills.html">Skills</a></li>
-        </ul>
-
-        <!-- Tab Navigation for larger screens -->
         <ul class="tab-navigation">
-          <li><a href="index.html" class="tab active">About</a></li>
+          <li><a href="index.html" class="tab">About</a></li>
           <li><a href="projects.html" class="tab">Projects</a></li>
           <li><a href="experience.html" class="tab">Experience</a></li>
           <li><a href="skills.html" class="tab">Skills</a></li>
         </ul>
       </nav>
+
+      <!-- Hamburger Menu for smaller screens -->
+      <div class="hamburger-menu" id="hamburger-menu">☰</div>
+
+      <!-- Dropdown Menu for small screens -->
+      <ul class="dropdown-menu" id="dropdown-menu">
+        <li><a href="index.html">About</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="skills.html">Skills</a></li>
+      </ul>
     </header>
 
     <!-- Main Content for About Section -->
@@ -45,34 +44,42 @@
       <div class="content-container">
         <!-- Profile Image -->
         <div class="profile-image-container">
-          <img src="path_to_profile_image.jpg" alt="Profile Image" class="profile-image">
+          <img src="images/profile-placeholder.jpg" alt="Profile Picture" class="profile-image">
         </div>
 
-        <!-- Introduction -->
-        <h1 class="hire-me-title">Hello, I'm Shyam Kannan</h1>
-        <p class="hire-me-text">My love for technology started with video games, especially car games like <i>Need for Speed</i>. The excitement of those virtual worlds sparked a curiosity in me that eventually led to coding...</p>
+        <!-- Title and Description -->
+        <div class="hire-me-container">
+          <h1 class="hire-me-title">Hello, I'm Shyam Kannan</h1>
+          <p class="hire-me-text">My love for technology started with video games, especially car games like Need for Speed. The excitement of those virtual worlds sparked a curiosity in me that eventually led to coding. In high school, I built a version of Minesweeper as my first programming project. It may have been simple, but it was incredibly rewarding to see my code come to life.</p>
+          <p class="hire-me-text">As I moved into college, I tackled more complex projects, including building a C++ compiler. Diving into the inner workings of programming languages opened my eyes to just how powerful code can be. That project pushed me to go deeper into areas like machine learning and cloud infrastructure.</p>
+          <p class="hire-me-text">Now, whether it's refining algorithms, exploring cloud technologies, or building web applications, I’m always excited to take on new challenges in tech. Each project feels like leveling up in a game, driving me to improve and learn more.</p>
+        </div>
 
-        <!-- CV Download Button -->
+        <!-- Download CV Button -->
         <button class="download-cv-button">Download CV</button>
       </div>
     </main>
 
     <!-- Footer Section -->
     <footer>
+      <hr class="footer-line">
       <p>© 2024 Shyam Kannan. All rights reserved.</p>
     </footer>
 
   </div>
 
+  <!-- JavaScript for Mobile Menu and Theme Toggle -->
   <script>
-    // Mobile menu toggle
-    const menuButton = document.querySelector('.hamburger-menu');
-    const dropdownMenu = document.querySelector('.dropdown-menu');
+    document.getElementById('theme-toggle').addEventListener('click', function () {
+      document.body.classList.toggle('dark-mode');
+    });
 
-    menuButton.addEventListener('click', () => {
+    const hamburgerMenu = document.getElementById('hamburger-menu');
+    const dropdownMenu = document.getElementById('dropdown-menu');
+
+    hamburgerMenu.addEventListener('click', function () {
       dropdownMenu.classList.toggle('active');
     });
   </script>
 </body>
 </html>
-
