--- a/project_files/index.html
+++ b/project_files/index.html
@@ -19,9 +19,10 @@
     <header>
       <nav class="nav-container">
         <button id="theme-toggle" class="theme-toggle">🌙</button>
-        <!-- Hamburger menu for mobile devices -->
-        <div class="hamburger-menu">☰</div>
-        <ul class="tab-navigation dropdown-menu">
+        <!-- Hamburger menu button -->
+        <button id="menu-toggle" class="hamburger-menu">☰</button>
+        <!-- Dropdown menu for mobile -->
+        <ul id="dropdown-menu" class="tab-navigation hidden">
           <li><a href="index.html" class="tab active">About</a></li>
           <li><a href="projects.html" class="tab">Projects</a></li>
           <li><a href="experience.html" class="tab">Experience</a></li>
