--- a/project_files/index.html
+++ b/project_files/index.html
@@ -8,7 +8,6 @@
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -19,10 +18,10 @@
     <header>
       <nav class="nav-container">
         <button id="theme-toggle" class="theme-toggle">🌙</button>
-        <!-- Hamburger menu button -->
+        <!-- Hamburger menu button for mobile only -->
         <button id="menu-toggle" class="hamburger-menu">☰</button>
-        <!-- Dropdown menu for mobile -->
-        <ul id="dropdown-menu" class="tab-navigation hidden">
+        <!-- Standard Nav Bar -->
+        <ul id="dropdown-menu" class="tab-navigation">
           <li><a href="index.html" class="tab active">About</a></li>
           <li><a href="projects.html" class="tab">Projects</a></li>
           <li><a href="experience.html" class="tab">Experience</a></li>
