--- a/project_files/index.html
+++ b/project_files/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | Shyam Kannan</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
@@ -17,10 +18,8 @@
     <header>
       <nav class="nav-container">
         <button id="theme-toggle" class="theme-toggle">🌙</button>
-        <!-- Hamburger menu button for mobile only -->
-        <button id="menu-toggle" class="hamburger-menu">☰</button>
-        <!-- Standard Nav Bar -->
-        <ul id="dropdown-menu" class="tab-navigation">
+        <div class="hamburger-menu">☰</div>
+        <ul class="tab-navigation">
           <li><a href="index.html" class="tab active">About</a></li>
           <li><a href="projects.html" class="tab">Projects</a></li>
           <li><a href="experience.html" class="tab">Experience</a></li>
@@ -33,22 +32,6 @@
     <main class="content">
       <section class="hero-section">
         <div class="hero-content">
-          <div class="hero-text">
-            <h1 class="typewriter">Hello, I'm Shyam Kannan</h1>
-            <p>
-              My love for technology started with video games, especially car games like <em>Need for Speed</em>. The excitement of those virtual worlds sparked a curiosity in me that eventually led to coding. In high school, I built a version of <em>Minesweeper</em> as my first programming project. It may have been simple, but it was incredibly rewarding to see my code come to life.
-            </p>
-            <p>
-              As I moved into college, I tackled more complex projects, including building a C++ compiler. Diving into the inner workings of programming languages opened my eyes to just how powerful code can be. That project pushed me to go deeper into areas like machine learning and cloud infrastructure.
-            </p>
-            <p>
-              Now, whether it's refining algorithms, exploring cloud technologies, or building web applications, I’m always excited to take on new challenges in tech. Each project feels like leveling up in a game, driving me to improve and learn more.
-            </p>
-
-            <div class="hero-buttons">
-              <a href="Shyam_Kannan_CV.pdf" class="download-cv-btn" download>Download CV</a>
-            </div>
-          </div>
           <div class="hero-image">
             <img src="https://via.placeholder.com/300" alt="Shyam's Image" class="profile-img">
             <!-- Social Links Section -->
@@ -64,6 +47,23 @@
               </a>
             </div>
           </div>
+
+          <div class="hero-text">
+            <h1 class="typewriter">Hello, I'm Shyam Kannan</h1>
+            <p>
+              My love for technology started with video games, especially car games like <em>Need for Speed</em>. The excitement of those virtual worlds sparked a curiosity in me that eventually led to coding. In high school, I built a version of <em>Minesweeper</em> as my first programming project. It may have been simple, but it was incredibly rewarding to see my code come to life.
+            </p>
+            <p>
+              As I moved into college, I tackled more complex projects, including building a C++ compiler. Diving into the inner workings of programming languages opened my eyes to just how powerful code can be. That project pushed me to go deeper into areas like machine learning and cloud infrastructure.
+            </p>
+            <p>
+              Now, whether it's refining algorithms, exploring cloud technologies, or building web applications, I’m always excited to take on new challenges in tech. Each project feels like leveling up in a game, driving me to improve and learn more.
+            </p>
+            <div class="hero-buttons">
+              <a href="Shyam_Kannan_CV.pdf" class="download-cv-btn" download>Download CV</a>
+            </div>
+          </div>
+
         </div>
       </section>
     </main>
