Update experience.html logo links

--- a/project_files/experience.html
+++ b/project_files/experience.html
@@ -47,7 +47,7 @@
               <div class="timeline-line"></div>
               <div class="timeline-dot"></div>
               <div class="timeline-circle">
-                <img src="images/zuora-logo.svg" alt="Zuora Logo">
+                <img src="images/zuora-logo@logotyp.us.svg" alt="Zuora Logo">
               </div>
               <div class="timeline-date">Present</div>
               <div class="timeline-description">
@@ -61,7 +61,7 @@
               <div class="timeline-line"></div>
               <div class="timeline-dot"></div>
               <div class="timeline-circle">
-                <img src="images/zuora-logo.svg" alt="Zuora Logo">
+                <img src="images/zuora-logo@logotyp.us.svg" alt="Zuora Logo">
               </div>
               <div class="timeline-date">2022</div>
               <div class="timeline-description">
@@ -108,7 +108,7 @@
               <p>Graduate Cloud Engineer</p>
               <p class="date">Present</p>
             </div>
-            <img src="images/zuora-logo.svg" alt="Zuora Logo" class="card-logo">
+            <img src="images/zuora-logo@logotyp.us.svg" alt="Zuora Logo" class="card-logo">
           </div>
           <div class="experience-item experience-card">
             <div class="card-text">
@@ -116,7 +116,7 @@
               <p>Software Engineer Intern</p>
               <p class="date">2022</p>
             </div>
-            <img src="images/zuora-logo.svg" alt="Zuora Logo" class="card-logo">
+            <img src="images/zuora-logo@logotyp.us.svg" alt="Zuora Logo" class="card-logo">
           </div>
           <div class="experience-item experience-card">
             <div class="card-text">
@@ -158,7 +158,7 @@
               <div class="timeline-line"></div>
               <div class="timeline-dot"></div>
               <div class="timeline-circle">
-                <img src="images/arizona-state-sun-devils-logo.svg" alt="ASU Logo">
+                <img src="images/arizona-state-sun-devils-logo@logotyp.us.svg" alt="ASU Logo">
               </div>
               <div class="timeline-date">2020</div>
               <div class="timeline-description">
@@ -185,7 +185,7 @@
               <p>BS in Computer Science</p>
               <p class="date">2020</p>
             </div>
-            <img src="images/arizona-state-sun-devils-logo.svg" alt="ASU Logo" class="card-logo">
+            <img src="images/arizona-state-sun-devils-logo@logotyp.us.svg" alt="ASU Logo" class="card-logo">
           </div>
         </div>
 
