Update index.html mobile

--- a/project_files/index.html
+++ b/project_files/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,8 +9,6 @@
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
 <body>
 
@@ -34,8 +33,7 @@
       <section class="hero-section">
         <div class="hero-content">
           <div class="hero-text">
-            <!-- Typing effect will appear here -->
-            <h1 class="typewriter"></h1>
+            <h1 class="typewriter">Hello, I’m Shyam Kannan!</h1>
             <p>
               My love for technology started with video games, especially car games like <em>Need for Speed</em>. The excitement of those virtual worlds sparked a curiosity in me that eventually led to coding. In high school, I built a version of <em>Minesweeper</em> as my first programming project. It may have been simple, but it was incredibly rewarding to see my code come to life.
             </p>
@@ -57,22 +55,21 @@
             <!-- Social Links Section -->
             <div class="social-links">
               <a href="https://github.com/shyam-kannan" target="_blank">
-                <img src="https://img.icons8.com/ios-filled/50/00ff88/github.png" alt="GitHub Icon"> Follow on GitHub
+                <img src="https://img.icons8.com/ios-filled/50/00ff88/github.png" alt="GitHub Icon"> 
+                <span class="desktop-only">Follow on GitHub</span>
               </a>
               <a href="https://www.linkedin.com/in/shyam-kannan-sde/" target="_blank">
-                <img src="https://img.icons8.com/ios-filled/50/00ff88/linkedin.png" alt="LinkedIn Icon"> Follow on LinkedIn
+                <img src="https://img.icons8.com/ios-filled/50/00ff88/linkedin.png" alt="LinkedIn Icon"> 
+                <span class="desktop-only">Follow on LinkedIn</span>
               </a>
               <a href="mailto:shyamwork2000@gmail.com">
-                <img src="https://img.icons8.com/ios-filled/50/00ff88/email.png" alt="Email Icon"> shyamwork2000@gmail.com
+                <img src="https://img.icons8.com/ios-filled/50/00ff88/email.png" alt="Email Icon"> 
+                <span class="desktop-only">shyamwork2000@gmail.com</span>
               </a>
             </div>
-            
           </div>
         </div>
       </section>
-
-
-      
     </main>
 
     <!-- Footer Section -->
