--- a/project_files/experience.html
+++ b/project_files/experience.html
@@ -47,7 +47,7 @@
               <div class="timeline-line"></div>
               <div class="timeline-dot"></div>
               <div class="timeline-circle">
-                <img src="images/zuora-logo@logotyp.us.svg" alt="Zuora Logo">
+                <img src="Images/zuora-logo@logotyp.us.svg" alt="Zuora Logo">
               </div>
               <div class="timeline-date">Present</div>
               <div class="timeline-description">
@@ -61,7 +61,7 @@
               <div class="timeline-line"></div>
               <div class="timeline-dot"></div>
               <div class="timeline-circle">
-                <img src="images/zuora-logo@logotyp.us.svg" alt="Zuora Logo">
+                <img src="Images/zuora-logo@logotyp.us.svg" alt="Zuora Logo">
               </div>
               <div class="timeline-date">2022</div>
               <div class="timeline-description">
@@ -75,7 +75,7 @@
               <div class="timeline-line"></div>
               <div class="timeline-dot"></div>
               <div class="timeline-circle">
-                <img src="images/kwf_transparent.png" alt="Kashmir World Foundation Logo">
+                <img src="Images/kwf_transparent.png" alt="Kashmir World Foundation Logo">
               </div>
               <div class="timeline-date">2021</div>
               <div class="timeline-description">
@@ -89,7 +89,7 @@
               <div class="timeline-line"></div>
               <div class="timeline-dot"></div>
               <div class="timeline-circle">
-                <img src="images/enverus_transparent.png" alt="Enverus Logo">
+                <img src="Images/enverus_transparent.png" alt="Enverus Logo">
               </div>
               <div class="timeline-date">2019</div>
               <div class="timeline-description">
@@ -108,7 +108,7 @@
               <p>Graduate Cloud Engineer</p>
               <p class="date">Present</p>
             </div>
-            <img src="images/zuora-logo@logotyp.us.svg" alt="Zuora Logo" class="card-logo">
+            <img src="Images/zuora-logo@logotyp.us.svg" alt="Zuora Logo" class="card-logo">
           </div>
           <div class="experience-item experience-card">
             <div class="card-text">
@@ -116,7 +116,7 @@
               <p>Software Engineer Intern</p>
               <p class="date">2022</p>
             </div>
-            <img src="images/zuora-logo@logotyp.us.svg" alt="Zuora Logo" class="card-logo">
+            <img src="Images/zuora-logo@logotyp.us.svg" alt="Zuora Logo" class="card-logo">
           </div>
           <div class="experience-item experience-card">
             <div class="card-text">
@@ -124,7 +124,7 @@
               <p>Artificial Intelligence Intern</p>
               <p class="date">2021</p>
             </div>
-            <img src="images/kwf_transparent.png" alt="Kashmir World Foundation Logo" class="card-logo">
+            <img src="Images/kwf_transparent.png" alt="Kashmir World Foundation Logo" class="card-logo">
           </div>
           <div class="experience-item experience-card">
             <div class="card-text">
@@ -132,7 +132,7 @@
               <p>Software Engineer Intern</p>
               <p class="date">2019</p>
             </div>
-            <img src="images/enverus_transparent.png" alt="Enverus Logo" class="card-logo">
+            <img src="Images/enverus_transparent.png" alt="Enverus Logo" class="card-logo">
           </div>
         </div>
 
@@ -144,7 +144,7 @@
               <div class="timeline-line"></div>
               <div class="timeline-dot"></div>
               <div class="timeline-circle">
-                <img src="images/san-jose-state-spartans.svg" alt="SJSU Logo">
+                <img src="Images/san-jose-state-spartans.svg" alt="SJSU Logo">
               </div>
               <div class="timeline-date">2022</div>
               <div class="timeline-description">
@@ -158,7 +158,7 @@
               <div class="timeline-line"></div>
               <div class="timeline-dot"></div>
               <div class="timeline-circle">
-                <img src="images/arizona-state-sun-devils-logo@logotyp.us.svg" alt="ASU Logo">
+                <img src="Images/arizona-state-sun-devils-logo@logotyp.us.svg" alt="ASU Logo">
               </div>
               <div class="timeline-date">2020</div>
               <div class="timeline-description">
@@ -177,7 +177,7 @@
               <p>Master's in AI</p>
               <p class="date">2022</p>
             </div>
-            <img src="images/san-jose-state-spartans.svg" alt="SJSU Logo" class="card-logo">
+            <img src="Images/san-jose-state-spartans.svg" alt="SJSU Logo" class="card-logo">
           </div>
           <div class="experience-item education-card">
             <div class="card-text">
@@ -185,7 +185,7 @@
               <p>BS in Computer Science</p>
               <p class="date">2020</p>
             </div>
-            <img src="images/arizona-state-sun-devils-logo@logotyp.us.svg" alt="ASU Logo" class="card-logo">
+            <img src="Images/arizona-state-sun-devils-logo@logotyp.us.svg" alt="ASU Logo" class="card-logo">
           </div>
         </div>
 
