--- a/project_files/index.html
+++ b/project_files/index.html
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="hero-image">
-            <img src="Images/profileWebsite.jpg/300" alt="Shyam's Image" class="profile-img">
+            <img src="Images/profileWebsite.jpg" alt="Shyam's Image" class="profile-img">
             <!-- Social Links Section -->
             <div class="social-links">
               <a href="https://github.com/shyam-kannan" target="_blank">
