--- a/project_files/projects.html
+++ b/project_files/projects.html
@@ -40,7 +40,7 @@
         <section class="projects-section active">
           <!-- For mobile responsiveness: moving the image first when stacked -->
           <div class="project-image">
-            <img src="Images/c++\ compiler.png" alt="Project Image">
+            <img src="Images/C++_project.png" alt="Project Image">
           </div>
           <div class="project-text">
             <div class="project-number">01</div>
@@ -59,7 +59,7 @@
         <!-- Second Project -->
         <section class="projects-section">
           <div class="project-image">
-            <img src="Images/securitycamera.png" alt="Project Image">
+            <img src="Images/Security_camera_project.png" alt="Project Image">
           </div>
           <div class="project-text">
             <div class="project-number">02</div>
